--- a/report/bibliographies.bib
+++ b/report/bibliographies.bib
@@ -6,6 +6,12 @@ year = {Anders}
 }
 
 % --- Introduction ---
+@misc{fielding1999hypertext,
+  title={Hypertext transfer protocol--HTTP/1.1},
+  author={Fielding, Roy and Gettys, Jim and Mogul, Jeffrey and Frystyk, Henrik and Masinter, Larry and Leach, Paul and Berners-Lee, Tim},
+  year={1999},
+  publisher={RFC 2616, June}
+}
 @inproceedings{durumeric2014matter,
   title={The matter of Heartbleed},
   author={Durumeric, Zakir and Kasten, James and Adrian, David and Halderman, J Alex and Bailey, Michael and Li, Frank and Weaver, Nicolas and Amann, Johanna and Beekman, Jethro and Payer, Mathias and others},
