--- a/report/Introduction.tex
+++ b/report/Introduction.tex
@@ -103,7 +103,7 @@ over a public network.
   \item[Background] - Useful background information the reader should know
   \item[Architecture] - Describes a birds eye view of out initial solution
   \item[Solution] - Information on our solution operates 
-  \item[Protocol - Implementations] - Protocols implemented with our DSL
+  \item[Protocol Implementations] - Protocols implemented with our DSL
   \item[Evaluation] - Critical and objective evaluation of our work 
   \item[Conclusion] - Summarizes our paper and proposes future work.
 \end{description}
